# dicom2rdf

./: .dockerignore  .env.example  .gitignore  Dockerfile  Qleverfile  Qleverfile-ui.template.yml  README.md  compose.isolated.yml  compose.pipeline.yml  compose.yml  config.toml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/construct/: Cargo.toml
crates/construct/src/: lib.rs  main.rs
crates/convert/: Cargo.toml
crates/convert/src/: datetime.rs  dicom.rs  io.rs  lib.rs  main.rs  progress.rs  turtle.rs
crates/dcmpeek/: Cargo.toml
crates/dcmpeek/src/: main.rs
crates/populate-prefixes/: Cargo.toml
crates/populate-prefixes/src/: main.rs
scripts/: build-raw-index.sh  construct.sh  entrypoint-ui.sh  update_dcm_concept_code_labels.sh  update_dcm_tag_labels.sh  update_sop_class_uid_labels.sh
ttl-static/: dcm-concept-code-labels.ttl  dcm-tag-labels.ttl  sop-class-uid-labels.ttl
