[package]
name = "construct"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../config" }
clap = { version = "4.5.42", features = ["derive"] }
env_logger = "0.11.8"
flate2 = "1.1.2"
itertools = "0.14.0"
log = "0.4.27"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.48.0", features = ["full"] }
