[package]
name = "convert"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.42", features = ["derive"] }
config = { path = "../config" }
dicom = "0.8.2"
env_logger = "0.11.8"
flate2 = "1.1.2"
log = "0.4.27"
rayon = "1.11.0"
tar = "0.4.44"
tempfile = "3.20.0"
tikv-jemallocator = "0.6.1"
urlencoding = "2.1.3"
walkdir = "2.5.0"
zstd = "0.13.3"

